--- a/Dashboard/Properties/Resources.resx
+++ b/Dashboard/Properties/Resources.resx
@@ -199,4 +199,10 @@
   <data name="Ok_48px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ok_48px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fmale" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6833591.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="male" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
