color and icons

--- a/Dashboard/users/UC_Users.resx
+++ b/Dashboard/users/UC_Users.resx
@@ -127,15 +127,15 @@
   <data name="Panel_users.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAxSURBVChTYyg78P9/85H//yee+P9/3pn//1df+P9/x5X/
-        /4/e+P//8p3//0eEgv//AQF73Blewie+AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAUSURBVChTY3jw4P9/fHhEKPj/HwB2ve+BPK/nAwAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="Panel_blocked.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAxSURBVChTYyg78P9/85H//yee+P9/3pn//1df+P9/x5X/
-        /4/e+P//8p3//0eEgv//AQF73Blewie+AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAUSURBVChTY3jw4P9/fHhEKPj/HwB2ve+BPK/nAwAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <metadata name="Elipse_blocked.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
